tests/syntax_error/const_missing_name.jou
const : int = 42  # Error: expected a constant name, got ':'
